# Qt-Polar-plotter

./: README.md
Qt-task-1/: CMakeLists.txt  DataPanelDialog.ui  PolarGraphWindow.ui  datapaneldialog.cpp  datapaneldialog.h  main.cpp  polargraphwindow.cpp  polargraphwindow.h  polarplotter.cpp  polarplotter.h
Qt-task-1/polarFuncLib/: CMakeLists.txt  archspiralfunc.cpp  archspiralfunc.h  butterflyfunc.cpp  butterflyfunc.h  headfunc.cpp  headfunc.h  polarfunc.h  polarfunction.cpp  polarfunction.h  rosecurvefunc.cpp  rosecurvefunc.h
